# EpubToAudioBookConverter

./: main.py  pyproject.toml
src/: my_edge_tts.py
